{
  "@@locale":"en",
  "home":"Home",
  "search":"Search",
  "settings":"Settings",
  "nowPlaying":"Now Playing",
  "recommend":"Recommend",
  "topRated":"Top Rated",
  "popular":"Popular",
  "upcoming":"Upcoming",
  "error": "Error fetching movie",
  "homePage": "Home page",
  "releaseDate": "release date",
  "productionCompanies":"productionCompanies",
  "review": "Review",
  "reviewedBy": "rated this movie",
  "reviewNotFound": "no review yet",
  "searchByKeyword":"search movie by keyword",
  "movieNotFound":"movie not found.",
  "language":"Language",
  "ja":"Japanese",
  "en":"English",
  "currentLang": "current Language",
  "lightTheme":"light theme",
  "darkTheme":"dark theme"
}