...
  });
  final Movie movie;

  @override
  Widget build(BuildContext context) {
    return SingleChildScrollView(
      key: const Key('singleChildScrollView'),
      child: Padding(
        padding: const EdgeInsets.all(8),
        child: AnimationLimiter(
          child: Column(
            crossAxisAlignment: CrossAxisAlignment.start,
            children: AnimationConfiguration.toStaggeredList(
...
